--- a/main.html
+++ b/main.html
@@ -11,17 +11,17 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <form method="post">
-	<label for= "name">Name</label>
-	<input type="text"  id="name" required placeholder="Name"/><br>
-	<label for="email">Email </label>
-	<input type="email"  id="email" required placeholder="Email"/>
+	<label for= "name">Name:</label>
+	<input type="text"  id="name"  placeholder="Name" required><br>
+	<label for="email">Email: </label>
+	<input type="email"  id="email"  placeholder="Email"required>
 	<br>
-	<label for= "gender">Gender  </label>  
+	<label for= "gender">Gender:</label>  
 	<input type="radio"  id="gender_m" required/>Male<br>
 	<input type="radio"  id="gender_f" required/>Female<br>
-	<label for="cars"> Select Cars </label>
-	<select id="cars" placeholder="please choose an option">
-<option value="Please Choose an option">Please Choose an option </option>
+	<label for="cars">Car Brands </label>
+	<select id="cars" required>
+<option value="">Please choose an option </option>
 <option value="hyundai">Hyundai</option>
 <option value="Maruti Suzuki">Suzuki<option/>
 <option value="Toyoto">Toyoto<option/>
@@ -29,16 +29,16 @@
 
 	</select><br>	
 	<label for="age"> Age</label>
-	<input type="Number"  required id="age" placeholder="Age"/>
+	<input type="Number"   id="age" placeholder="Age"required/>
 <br>
-	<label for= "dob" >DOB</label>
-	<input type="date"  required id="dob"/><br>
-	<label for= "tel">Phone Number</label>
+	<label for= "dob" >DOB:</label>
+	<input type="date" id="dob" required/><br>
+	<label for= "tel">Phone Number:</label>
 	<input type="tel"  id="tel" placeholder="xxx-xxx-xxxx" required/><br>
-	<label for="password">Password</label>
-	<input type="password" placeholder="Password" required/><br>
-
-	<input type="checkbox" id="tos" />I agree to the TOS
+	<label for="password">Password:</label>
+	<input type="password" id="password" placeholder="Password" required/><br>
+<label for="tos">
+	<input type="checkbox" id="tos" required />I agree to the TOS
 	<br>
 	<button type= "submit">Submit</button>
 </form>
