--- a/main.html
+++ b/main.html
@@ -12,15 +12,18 @@
 </script>
 <form method="post">
 	<label for= "name">Name:</label>
-	<input type="text"  id="name"  placeholder="Name" required><br>
+	<input type="text" name="name" id="name"  placeholder="Name" required><br>
 	<label for="email">Email: </label>
-	<input type="email"  id="email"  placeholder="Email"required>
+	<input type="email" name="email" id="email"  placeholder="Email"required>
 	<br>
 	<label for= "gender">Gender:</label>  
-	<input type="radio"  id="gender_m" required/>Male<br>
-	<input type="radio"  id="gender_f" required/>Female<br>
+	
+	<input type="radio"  name="gender" id="gender_m" value= "male"required/>Male<br>
+	<label for="gender_m">Male </label>
+	<input type="radio"  id="gender_f" value="female" required/>Female<br>
+	<label for="gender_f">Female </label>
 	<label for="cars">Car Brands </label>
-	<select id="cars" required>
+	<select name ="cars"id="cars" required>
 <option value="">Please choose an option </option>
 <option value="hyundai">Hyundai</option>
 <option value="Maruti Suzuki">Suzuki<option/>
@@ -28,15 +31,15 @@
 	<option value="Toyoto">Tata<option/>
 
 	</select><br>	
-	<label for="age"> Age</label>
-	<input type="Number"   id="age" placeholder="Age"required/>
+	<label for="age"> Age:</label>
+	<input type="Number" name="age"   id="age" placeholder="Age"required/>
 <br>
 	<label for= "dob" >DOB:</label>
-	<input type="date" id="dob" required/><br>
+	<input type="date" name="dob" id="dob" required/><br>
 	<label for= "tel">Phone Number:</label>
 	<input type="tel"  id="tel" placeholder="xxx-xxx-xxxx" required/><br>
 	<label for="password">Password:</label>
-	<input type="password" id="password" placeholder="Password" required/><br>
+	<input type="password" name="password" id="password" placeholder="Password" required/><br>
 <label for="tos">
 	<input type="checkbox" id="tos" required />I agree to the TOS
 	<br>
