--- a/main.html
+++ b/main.html
@@ -16,12 +16,12 @@
 	<label for="email">Email: </label>
 	<input type="email" name="email" id="email"  placeholder="Email"required>
 	<br>
-	<label for= "gender">Gender:</label>  
+	<label>Gender:</label>  
 	<br>
-
-	<input type="radio"  name="gender" id="gender_m" value= "male"required/>Male<br>
-
-	<input type="radio"  id="gender_f" value="female" required/>Female<br>
+	<label for="gender_m">Male </label>
+	<input type="radio"  name="gender" id="gender_m" value= "male"required/><br>
+	<label for="gender_f"> Female </label>
+	<input type="radio"  id="gender_f" value="female" required/><br>
 	<label for="cars">Car Brands </label>
 	<select name ="cars"id="cars" required>
 <option value="">Please choose an option </option>
@@ -41,7 +41,7 @@
 	<input type="tel"  id="tel" placeholder="xxx-xxx-xxxx" required/><br>
 	<label for="password">Password:</label>
 	<input type="password" name="password" id="password" placeholder="Password" required/><br>
-<label for="tos">
+   <label for="tos">
 	<input type="checkbox" id="tos" required />I agree to the TOS
 	<br>
 	<button type= "submit">Submit</button>
