--- a/main.html
+++ b/main.html
@@ -14,22 +14,22 @@
 	<label for= "name">Name:</label>
 	<input type="text" name="name" id="name"  placeholder="Name" required><br>
 	<label for="email">Email: </label>
-	<input type="email" name="email" id="email"  placeholder="Email"required>
+	<input type="email" name="email" id="email"  placeholder="Email" required>
 	<br>
 	<label>Gender:</label>  
 	<br>
 	<label for="gender_m">Male </label>
-	<input type="radio"  name="gender" id="gender_m" value= "male"required/><br>
+	<input type="radio"  name="gender" id="gender_m" value= "male" required/><br>
 	<label for="gender_f"> Female </label>
-	<input type="radio"  id="gender_f" value="female" required/><br>
-	<label for="cars">Car Brands </label>
-	<select name ="cars"id="cars" required>
+	<input type="radio" name="gender" id="gender_f" value="female" required/><br>
+	<label for="cars">Car Brands:</label>
+	<select name ="cars" id="cars" required>
 <option value="">Please choose an option </option>
 <option value="hyundai">Hyundai</option>
-<option value="Maruti Suzuki">Suzuki<option/>
-<option value="Toyoto">Toyoto<option/>
-<option value="Toyoto">Tata<option/>
-<option value="Toyoto">Tata<option/>
+<option value="Maruti_Suzuki">Suzuki</option>
+<option value="Toyoto">Toyoto </option>
+<option value="Toyoto">Tata </option>
+<option value="Toyoto">Tata </option>
 
 	</select><br>	
 	<label for="age"> Age:</label>
